@@ -7,12 +7,19 @@
  ! - <P></P></LI>
  ! - </UL>
   -->
+<DT>XXXX-XX-XX
+<DD>
+<UL>
+<LI>support starting prooftree in the middle of a proof
+</LI>
+<LI>keep proof tree windows when retracting in a big step to a
+point before the proof
+<P></P></LI>
+</UL>
 <DT>2011-04-21
 <DD>
 <UL>
 <LI><KBD>Show</KBD>, <KBD>Focus</KBD> and <KBD>Unfocus</KBD> work.
-</LI>
-<LI>Prevent starting prooftree in the middle of a proof.
 <P></P></LI>
 </UL>
 
